--- a/style.css
+++ b/style.css
@@ -46,3 +46,18 @@ main > div section img {
     padding: 5px 15px;
     text-transform: uppercase;
 }
+
+.detalhes-container {
+    font-weight: bold;
+    list-style-type: none;
+    width: 90%;
+}
+
+.detalhes-container > li {
+    align-items: baseline;
+    display: flex;
+}
+
+.detalhes-container > li p {
+    color: white;
+}
